      of the string)
  * Fixed: uriToStringCharsRequired* reported 1 more byte than actually needed
      for IPv4 address URIs (GitHub #41); Thanks to @gyh007 for the patch!
  * Fixed: Compilation with MinGW
      Thanks to Sandro Mani for the patch!
  * Fixed: Drop use of asprintf from the test suite for MinGW (GitHub #40)
  * Soname: TODO

2018-10-27 -- 0.9.0

>>>>>>>>>>>>> SECURITY >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
  * Fixed: [CVE-2018-19198]
      Out-of-bounds write in uriComposeQuery* and uriComposeQueryEx*
      Commit 864f5d4c127def386dd5cc926ad96934b297f04e
      Thanks to Google Autofuzz team for the report!
  * Fixed: [CVE-2018-19199]
      Detect integer overflow in uriComposeQuery* and uriComposeQueryEx*
      Commit f76275d4a91b28d687250525d3a0c5509bbd666f
      Thanks to Google Autofuzz team for the report!
  * Fixed: [CVE-2018-19200]
      Protect uriResetUri* against acting on NULL input
      Commit f58c25069cf4a986fe17a80c5b38687e31feb539
>>>>>>>>>>>>> SECURITY >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
  * Fixed: Be fully compliant to C89 (Gitub #28) and C++98 in test code
  * Fixed: Fix off-by-one in uriComposeQueryCharsRequired* and ...Ex*
      Reported space requirements were 1 byte bigger than necessary
  * Changed: Marked as deprecated:
      Deprecated functions:
        uriNormalizeSyntaxMaskRequired[AW]
        uriParseUri[AW]
        uriParseUriEx[AW]
  * Added: Add convenience functions to ease user code to parse a single URI
      New functions:
        uriParseSingleUri[AW]
        uriParseSingleUriEx[AW]
        uriParseSingleUriExMm[AW]
  * Added: Support for custom memory managers (GitHub #26, #35), see Doxygen
      New functions (as extension of existing ones):
        uriAddBaseUriExMm[AW]
        uriComposeQueryMallocExMm[AW]
        uriDissectQueryMallocExMm[AW]
        uriFreeQueryListMm[AW]
        uriFreeUriMembersMm[AW]
        uriNormalizeSyntaxExMm[AW]